# 0k

./: .flake8  .gitignore  Cargo.toml  README.md  expander_main.py  main.py  pyproject.toml  zerok.rs  zerok_example.rs  zerok_template.py
tests/: test_asymetric_quantization.py  test_fixed_point.py  test_graph.py  test_kzg.py  test_mkzg.py  test_plookup.py  test_poly.py  test_prover.py  test_pure_graph.py
tests/assets/: random_polynomial_r_powers_of_tau.ptau  zk_sumcheck_powers_of_tau.ptau
zerok/circuits/: circuit.py
zerok/commitments/kzg/: kzg.py  kzg_optimized.py
zerok/commitments/mkzg/: mkzg.py
zerok/graph/: engine.py  preprocessor.py
zerok/lookup/plookup/: benchmark.py  program.py  prover.py  setup.py  transcript.py  verifier.py
zerok/ops/: conv.py  from_onnx.py  gemm.py
zerok/polynomials/: asymmetric_quantization_field.py  field.py  poly.py  pure.py  symmetric_quantization_field.py  types.py
zerok/polynomials/utils/: base.py  lookup.py  utils.py
zerok/prover/: prover.py
zerok/transcript/: transcript.py
zerok/transcript/merlin/: merlin_transcript.py  strobe.py
zerok/types/: proof.py
zerok/utils/: curve_optimized.py  poly.py  poly_optimized.py  transcript.py  utils.py
zerok/verifier/: verifier.py
zerok_compiler/: mod.rs  zerok_backend.rs
