[package]
name = "zerok_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection.git" }
rand = "0.8.5"
chrono = "0.4"
ethnum = "1.5.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = [
    "bits",
] }
arith = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly" }
expander_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly", package = "config" }
expander_circuit = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly", package = "circuit" }
gkr = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly" }
gf2 = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly" }
mersenne31 = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly" }
expander_transcript = { git = "https://github.com/PolyhedraZK/Expander", branch = "nightly" , package = "transcript" }
[[bin]]
name = "zerok"
path = "zerok.rs"